     accessibility computation
 * Accessibility* :
   - getES() : now part of InteractionEnergy interface
 * AccessibilityVrna :
   - EsMatrix : moved to InteractionEnergyVrna
   - esValues : moved to InteractionEnergyVrna
   - computeES() : moved to InteractionEnergyVrna
   * constructor() :
     - plFoldL : now via AccessibilityConstraint.getMaxBpSpan()
     - computeES
 * InteractionEnergy :
   * getES*() now abstract and to be implemented in subclass
   - getES*() implementation based on Accessibility interface
 * InteractionEnergyBasePair :
   + getES*() : throws exception since not implemented yet
   * constructor() :
     + initES : whether or not to compute precompute ES values
 * InteractionEnergyVrna :
   * constructor() :
     + initES : whether or not to compute precompute ES values
   + EsMatrix data type
   + esValues1/2 : optional ES value data
   + getES*() : returns esValues* entry if available; throws exception otherwise
   + computeES() : inits ES values based on VRNA routines
 * VrnaHandler :
   * getModel() :
     * uses now vrna_md_copy() (VRNA >= 2.3.0) for model copying

170202 Martin Mann :
 * CommandLineParsing :
   * outMaxE maximum now 999 (was 0)
   - PredictionMode : replaced by char-based setup
   * seedMaxUPq -> seedQMaxUP
   * seedMaxUPt -> seedTMaxUP
   * seedRangeq -> seedQRange
   * seedRanget -> seedTRange
   + pred + validator : setup of prediction target (mfe-si, maxprob-si, ...)
   * predMode : 
     * char-based setup
     - max-prob mode (now selected via --pred=P)
   * outOverlap : char-based setup
   * outAccFileq -> outQAccFile
   * outAccFilet -> outTAccFile
   * outPuFileq -> outQPuFile
   * outPuFilet -> outTPuFile
   * get*Accessibility() :
     * computeES setup now via pred.val
   * getPredictor() :
     + support for different prediction targets via pred.val switch
 * OutputConstraint :
   * constructor() :
     - (maxE < 0) check removed
 + intarna_config.h.in : header containing package version and configure 